# plda

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README.md  cmd_flags.h  lda.cc  lda_test.cc  model.cc  mpi_lda_test.cc  mpi_lda_with_doc.cc  mpi_test.cc  runPLDA.sh
run/: lda.cc  lda_with_doc.cc
src/: cmd_flags.cc
